[package]
name    = "telegram-chat"
version = "0.1.0"
edition = "2021"
authors = ["George Miao <gm@miao.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
mod_use    = "0.2.1"
color-eyre = { version = "0.6.1", default-features = false }
serde      = { version = "1.0.137", features = ["derive"] }
url        = { version = "2.2.2", features = ["serde"] }
